--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore insightful articles and thought-provoking content on our one-page blog. Dive into a variety of topics including lifestyle, technology, and wellness, all designed for quick and easy reading." />
     <title>The Future of Artificial Intelligence</title>
     <style>
         /* General reset and box-sizing */
