--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore insightful articles and thought-provoking content on our one-page blog. Dive into a variety of topics including lifestyle, technology, and wellness, all designed for quick and easy reading." />
-    <title>The Seven Page Blog</title>
+    <meta name="description" content="Wife of Equatorial Guinea man, Baltasar Ebang is reportedly also cheating according to some sources." />
+    <title>The Controversy Surrounding Baltasar Ebang: Allegations of Cheating</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         /* General reset and box-sizing */
         * {
@@ -70,6 +71,19 @@
     </style>
 </head>
 <body>
+    <script async="async" data-cfasync="false" src="//pl24972024.profitablecpmrate.com/9d61361e657813a827ebccb2048f7c52/invoke.js"></script>
+<div id="container-9d61361e657813a827ebccb2048f7c52"></div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'fc60cb52e46ab0c9737ac177499b594b',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type='text/javascript' src='//pl24972079.profitablecpmrate.com/3f/9c/3a/3f9c3aaeb58f1505945be205d2057a4e.js'></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/fc60cb52e46ab0c9737ac177499b594b/invoke.js"></script>
 
     <div class="container">
         <h1>The Controversy Surrounding Baltasar Ebang: Allegations of Cheating</h1>
@@ -77,15 +91,44 @@
         <p class="date">November 9, 2024</p>
 
         <img src="a.jpg" width="800px" height="400px" alt="Artificial Intelligence">
-        <a href="https://t.me/PAWSOG_bot/PAWS?startapp=bNA546kz" download>Download and Watch All Videos</a>
-
+        <a href="https://www.profitablecpmrate.com/wrwkhi5mm4?key=2ca3da1a0bd52d041eda8945640e6f69" download>Download and Watch All Videos</a>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '9ba77f0b0ecfc4768f2a1a2607603100',
+                'format' : 'iframe',
+                'height' : 50,
+                'width' : 320,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/9ba77f0b0ecfc4768f2a1a2607603100/invoke.js"></script>
         <p>
            In recent news, allegations have surfaced claiming that Baltasar Ebang, a prominent figure in his field, is reportedly involved in cheating. While the specific details surrounding the claims are still emerging, the implications of such an accusation could be significant, both for Ebang and the industry he is part of.
            <a href="https://t.me/PAWSOG_bot/PAWS?startapp=bNA546kz" download>Download and Watch All Videos</a>
             <br><br>
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '9ba77f0b0ecfc4768f2a1a2607603100',
+                    'format' : 'iframe',
+                    'height' : 50,
+                    'width' : 320,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.highperformanceformat.com/9ba77f0b0ecfc4768f2a1a2607603100/invoke.js"></script>
            Initial reports suggest that the allegations arose from discrepancies in Ebang's recent work or performance, prompting scrutiny from peers and the public alike. As more information becomes available, many are keen to understand the nature of these claims—whether they pertain to academic dishonesty, unethical practices in business, or misconduct in another arena.
             <a href="https://t.me/PAWSOG_bot/PAWS?startapp=bNA546kz" download>Download and Watch All Videos</a>
             <br><br>
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '9ba77f0b0ecfc4768f2a1a2607603100',
+                    'format' : 'iframe',
+                    'height' : 50,
+                    'width' : 320,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.highperformanceformat.com/9ba77f0b0ecfc4768f2a1a2607603100/invoke.js"></script>
            If the accusations are substantiated, they could lead to serious consequences for Ebang. Not only might he face professional penalties, but the damage to his reputation could have far-reaching impacts. Trust is crucial in any industry, and once compromised, it can take years to rebuild.
             <a href="https://t.me/PAWSOG_bot/PAWS?startapp=bNA546kz" download>Download and Watch All Videos</a>
             <br><br>
@@ -95,6 +138,39 @@
            As the story continues to develop, it serves as a reminder of the importance of ethical conduct and transparency. Whether Ebang’s reputation can withstand these allegations will ultimately depend on the outcome of ongoing discussions and investigations. Stakeholders in his industry will undoubtedly be watching closely, as the implications of this situation could resonate well beyond Ebang himself.
         </p>
     </div>
+    <div class="footer" style="height: 400px; width: 100%; background-color: #333;">
 
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '88964d5e47433bd865b744c2cd31efa6',
+                'format' : 'iframe',
+                'height' : 600,
+                'width' : 160,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/88964d5e47433bd865b744c2cd31efa6/invoke.js"></script>
+    </div>
+    <script type='text/javascript' src='//pl24971967.profitablecpmrate.com/80/4b/c5/804bc5387cef0e0165aaee1804bea6b0.js'></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '9ba77f0b0ecfc4768f2a1a2607603100',
+            'format' : 'iframe',
+            'height' : 50,
+            'width' : 320,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/9ba77f0b0ecfc4768f2a1a2607603100/invoke.js"></script>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '4eb7e8c256562b5fdb545162f6d04fa6',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/4eb7e8c256562b5fdb545162f6d04fa6/invoke.js"></script>
 </body>
 </html>
