--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		'params' : {}
 	};
 </script>
-<script type='text/javascript' src='//pl24972079.profitablecpmrate.com/3f/9c/3a/3f9c3aaeb58f1505945be205d2057a4e.js'></script>
+<!-- <script type='text/javascript' src='//pl24972079.profitablecpmrate.com/3f/9c/3a/3f9c3aaeb58f1505945be205d2057a4e.js'></script> -->
 <script type="text/javascript" src="//www.highperformanceformat.com/fc60cb52e46ab0c9737ac177499b594b/invoke.js"></script>
 
     <div class="container">
@@ -92,7 +92,7 @@
 
         <img src="a.jpg" width="800px" height="400px" alt="Artificial Intelligence">
         <a href="https://www.profitablecpmrate.com/wrwkhi5mm4?key=2ca3da1a0bd52d041eda8945640e6f69" download>Download and Watch All Videos</a>
-        <script type="text/javascript">
+<!--         <script type="text/javascript">
             atOptions = {
                 'key' : '9ba77f0b0ecfc4768f2a1a2607603100',
                 'format' : 'iframe',
@@ -100,7 +100,7 @@
                 'width' : 320,
                 'params' : {}
             };
-        </script>
+        </script> -->
         <script type="text/javascript" src="//www.highperformanceformat.com/9ba77f0b0ecfc4768f2a1a2607603100/invoke.js"></script>
         <p>
            In recent news, allegations have surfaced claiming that Baltasar Ebang, a prominent figure in his field, is reportedly involved in cheating. While the specific details surrounding the claims are still emerging, the implications of such an accusation could be significant, both for Ebang and the industry he is part of.
@@ -152,7 +152,7 @@
         <script type="text/javascript" src="//www.highperformanceformat.com/88964d5e47433bd865b744c2cd31efa6/invoke.js"></script>
     </div>
     <script type='text/javascript' src='//pl24971967.profitablecpmrate.com/80/4b/c5/804bc5387cef0e0165aaee1804bea6b0.js'></script>
-    <script type="text/javascript">
+<!--     <script type="text/javascript">
         atOptions = {
             'key' : '9ba77f0b0ecfc4768f2a1a2607603100',
             'format' : 'iframe',
@@ -160,7 +160,7 @@
             'width' : 320,
             'params' : {}
         };
-    </script>
+    </script> -->
     <script type="text/javascript" src="//www.highperformanceformat.com/9ba77f0b0ecfc4768f2a1a2607603100/invoke.js"></script>
     <script type="text/javascript">
         atOptions = {
