--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
     <script async="async" data-cfasync="false" src="//pl24972024.profitablecpmrate.com/9d61361e657813a827ebccb2048f7c52/invoke.js"></script>
 <div id="container-9d61361e657813a827ebccb2048f7c52"></div>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	atOptions = {
 		'key' : 'fc60cb52e46ab0c9737ac177499b594b',
 		'format' : 'iframe',
@@ -81,7 +81,7 @@
 		'width' : 160,
 		'params' : {}
 	};
-</script>
+</script> -->
 <!-- <script type='text/javascript' src='//pl24972079.profitablecpmrate.com/3f/9c/3a/3f9c3aaeb58f1505945be205d2057a4e.js'></script> -->
 <script type="text/javascript" src="//www.highperformanceformat.com/fc60cb52e46ab0c9737ac177499b594b/invoke.js"></script>
 
