--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             margin: 0;
             outline: 0;
             border: 0;
+            overflow: auto;
         }
 
         /* Typography */
